--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@manekinekko/angular-web-bluetooth": "^3.0.0",
+    "@manekinekko/angular-web-bluetooth": "^3.0.0--b",
     "@types/web-bluetooth": "0.0.4",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
